feat[医务端-在线问诊]:fix药品添加bug、新增药品用法列表接口